# RevBench

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
agents/: README.md  advisory.py  compare.py  config.py  context.py  guard.py  llm.py  orchestrator.py  run.py  schemas.py  store.py  testing.py
agents/prompts/: fundamentals.py  news.py  risk.py  sentiment.py  strategist.py  technical.py
agents/roster/: advisory.py  reasoning.py  sentiment.py
backend/: Dockerfile  README.md
backend/app/: config.py  main.py  schemas.py  (+1 more)
data_pipeline/: README.md  fetch.py  jobs.py  publish.py  quality.py  scheduler.py  store.py  universe.py
docs/: AGENTS.md  ARCHITECTURE.md  DATA_SOURCES.md  DECISIONS.md  DESIGN_BRIEF.md  FINANCE_PRIMER.md  PLAN.md  REPORT.md  REVISIT.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
ml/: README.md  data.py
notebooks/: README.md
scripts/: bootstrap.sh
tests/: README.md  conftest.py  test_ablation.py  test_advisory.py  test_agents.py  test_altdata.py  test_backend.py  test_context.py  test_edgar.py  test_engine.py  test_features.py  test_fundamentals_normalize.py  test_fusion.py  test_gdelt.py  test_metrics.py  test_news.py  test_orchestrator.py  test_pipeline.py  test_publish.py  test_quality.py  test_sentiment_feature.py  test_store.py  test_ui_data.py  test_universe.py  test_yfinance_provider.py
ui/: data.py  streamlit_app.py
(+61 files in other folders)
